# Learn

./: CMakeLists.txt  fathm_ft.c  main.c  test.c  two_func.c
2.12.exercise/: 1.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c
3,3/: altnames.c  base.c  charcode.c  print2.c
3.1/: platinum.c
